<?xml version="1.0" encoding="utf-8"?>
<!--Copyright (c) 2014 Tumblr. All rights reserved.-->
<resources>

    <string name="app_name">TumblrLaunchSample</string>
	<string name="create_text_post">Create Text Post</string>
	<string name="create_link_post">Create Link Post</string>
	<string name="create_photo_post">Create Photo Post</string>
	<string name="create_multi_photo_post">Create Photo Set Post</string>
	<string name="view_blog">View a Blog</string>
	<string name="view_post">View A Post</string>
	<string name="view_tag">View a Tag</string>
    <string name="action_settings">Settings</string>

</resources>
